[package]
name = "jack2"
version = "0.1.0"
edition = "2021"

[dependencies]
arrayvec        = "0.7.2"
atb             = "0.1.0"
bitflags        = "1.3.2"
futures-core    = "0.3.21"
futures-channel = "0.3.21"
futures-util    = "0.3.21"
libloading      = "0.7.3"
log             = "0.4.17"
once_cell       = { version = "1.11.0", features = ["parking_lot"] }
thiserror       = "1.0.31"

[build-dependencies]
bindgen     = "0.59.2"
system-deps = "6.0.2"

[features]
v1_9_19 = []

[package.metadata.system-deps.jack]
version = "1.9.12"
v1_9_19 = { version = "1.9.19" }
