[package]
name = "jack"
version = "0.1.0"
edition = "2021"

[dependencies]
arrayvec        = "0.7.2"
atomic-triple-buffer = { git = "https://github.com/jf2048/atomic-triple-buffer.git" }
bitfield        = "0.13.2"
bitflags        = "1.3.2"
futures-channel = "0.3.21"
futures-util    = "0.3.21"
glib            = { git = "https://github.com/gtk-rs/gtk-rs-core.git", version = "0.16" }
libloading      = "0.7.3"
log             = "0.4.17"
once_cell       = { version = "1.11.0", features = ["parking_lot"] }
thiserror       = "1.0.31"

[build-dependencies]
bindgen     = "0.59.2"
system-deps = "6.0.2"

[package.metadata.system-deps]
jack = "1.9.12"
