[package]
name = "jack2"
version = "0.1.0"
edition = "2021"
rust-version = "1.60"

[dependencies]
arrayvec        = "0.7.2"
atb             = "0.1.0"
bitflags        = "1.3.2"
futures-core    = "0.3.21"
futures-channel = "0.3.21"
futures-util    = "0.3.21"
glib            = { version = "0.15.12", optional = true }
libloading      = "0.7.3"
log             = "0.4.17"
once_cell       = { version = "1.11.0", features = ["parking_lot"] }
thiserror       = "1.0.31"
tokio           = { version = "1", features = ["rt", "time"], optional = true }
tokio-stream    = { version = "0.1.10", optional = true }

[build-dependencies]
bindgen     = "0.59.2"
system-deps = "6.0.2"

[features]
glib = ["dep:glib"]
tokio = ["dep:tokio", "dep:tokio-stream"]
v1_9_19 = []

[package.metadata.system-deps.jack]
version = "1.9.12"
v1_9_19 = { version = "1.9.19" }

[package.metadata.docs.rs]
features = ["glib", "tokio"]
rustdoc-args = ["--cfg", "docsrs"]
